# Python

./: .bazelproject  .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  codecov.yml
.github/workflows/: ci.disabled  ci.yml
.tpl/: README.md  README.md.tpl  README_FOOTER.md.tpl  ocp-setup.py.tpl
config/: build.bzl  gust.bzl  rules.bzl
gust/: BUILD.bazel
gust/core/: BUILD.bazel
ocp/: BUILD.bazel  __init__.py  __main__.py  species.py
ocp/structs/: BUILD.bazel
opencannabis/: BUILD.bazel  __init__.py  setup.py
opencannabis/accounting/: BUILD.bazel  __init__.py
opencannabis/base/: BUILD.bazel  __init__.py
opencannabis/commerce/: BUILD.bazel
opencannabis/commerce/payments/: BUILD.bazel  __init__.py
opencannabis/contact/: BUILD.bazel
opencannabis/content/: BUILD.bazel
opencannabis/core/: BUILD.bazel
opencannabis/crypto/: BUILD.bazel
opencannabis/crypto/primitives/: BUILD.bazel
opencannabis/device/: BUILD.bazel
opencannabis/geo/: BUILD.bazel
opencannabis/geo/usa/ca/: BUILD.bazel
opencannabis/inventory/: BUILD.bazel
opencannabis/inventory/rfid/: BUILD.bazel
opencannabis/media/: BUILD.bazel
opencannabis/oauth/: BUILD.bazel
opencannabis/person/: BUILD.bazel
opencannabis/products/: BUILD.bazel
opencannabis/products/distribution/: BUILD.bazel
opencannabis/products/menu/: BUILD.bazel
opencannabis/proximity/: BUILD.bazel
opencannabis/regulatory/usa/ca/: BUILD.bazel
opencannabis/structs/: BUILD.bazel
opencannabis/structs/labtesting/: BUILD.bazel
opencannabis/structs/pricing/: BUILD.bazel
opencannabis/temporal/: BUILD.bazel
pytests/: BUILD.bazel
pytests/base/: BUILD.bazel
pytests/simple/: BUILD.bazel  sanity.py
tools/: Check.makefile  bazel.rc
