package(
    default_visibility = ["//visibility:public"],
)

load(
    "//config:rules.bzl",
    "ocp_module",
)

load(
    "@rules_python//python:defs.bzl",
    "py_library",
)

load(
    "@rules_pkg//:pkg.bzl",
    "pkg_tar",
)


exports_files(["__init__.py"])


py_library(
    name = "gust-init",
    srcs = [":__init__.py"],
    deps = [
        "//gust/core:library",
    ],
)

alias(
    name = "library",
    actual = "gust-init",
)

pkg_tar(
    name = "gust-init-archive",
    srcs = [":__init__.py"],
    package_dir = "gust/",
)
