
package(
    default_visibility = ["//visibility:private"],
)


load(
    "@rules_python//python:defs.bzl",
    "py_library",
    "py_binary",
)

load(
    "//config:rules.bzl",
    "ocp_py",
    "ocp_lib",
    "package",
)


## File Groups
filegroup(
    name = "root-py",
    srcs = glob(["*.py"]),
)


## Python Libraries
py_library(
    name = "main-init",
    srcs = ["__init__.py"],
)

py_library(
    name = "species",
    srcs = ["species.py"],
    deps = [
        ocp_lib("//ocp/structs:Species"),
    ],
)


## Python CLI Tool
py_binary(
    name = "ocp-bin",
    srcs = ["__main__.py"],
    main = "__main__.py",
    imports = ["ocp"],
    deps = [
        ":main-init",
        ":species",
    ],
)


package(
    name = "opencannabis_pkg",
    version = "0.0.1",
    description = "Python cannabis for interacting with OpenCannabis data.",
    long_description = "README.md",
    classifiers = [
        "Development Status :: 4 - Beta",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Operating System :: POSIX",
        "Programming Language :: Python :: 2",
        "Programming Language :: Python :: 2.6",
        "Programming Language :: Python :: 2.7",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
    ],
    keywords = "cannabis datamodel schema sdk",
    url = "http://github.com/OpenCannabis/Python",
    author = "Sam Gammon",
    author_email = "sam.g@cookies.co",
    license = "MIT",
    packages = [":ocp-bin"],
)


## Top-level (Public) Aliases
alias(
    name = "library",
    actual = "ocp-bin",
    visibility = ["//visibility:public"],
)

alias(
    name = "package",
    actual = "opencannabis_pkg",
    visibility = ["//visibility:public"],
)

alias(
    name = "tool",
    actual = "ocp-bin",
    visibility = ["//visibility:public"],
)
