
package(
    default_visibility = ["//visibility:public"],
)

load(
    "//config:rules.bzl",
    "ocp_py",
)

package = "@ocp//opencannabis/products"


## Protocol Definitions
[
    ocp_py(name = n, target = "%s:%s" % (package, n)) for n in [
        "Apothecary",
        "Cartridge",
        "Edible",
        "Extract",
        "Flower",
        "Merchandise",
        "Plant",
        "Preroll",
        "SKU",
    ]
]
