
package(
    default_visibility = ["//visibility:public"],
)

load(
    "//config:rules.bzl",
    "ocp_module"
)


## Protocol Definitions
ocp_module(
    name = "products",
    init = ":__init__.py",
    protos = [
        "Apothecary",
        "Cartridge",
        "Edible",
        "Extract",
        "Flower",
        "Merchandise",
        "Plant",
        "Preroll",
        "SKU",
    ],
)
