
package(
    default_visibility = ["//visibility:public"],
)

load(
    "//config:rules.bzl",
    "ocp_module",
)


ocp_module(
    name = "temporal",
    init = ":__init__.py",
    protos = [
        "Date",
        "Duration",
        "Instant",
        "Interval",
        "Schedule",
        "Time",
        "Timehash",
    ]
)
