
package(
    default_visibility = ["//visibility:public"],
)

load(
    "//config:rules.bzl",
    "ocp_module",
)


ocp_module(
    name = "labtesting",
    init = ":__init__.py",
    package = "structs/labtesting",
    protos = [
        "Cannabinoids",
        "Terpenes",
        "TestResults",
        "TestValue",
    ]
)
